# zacspy

./: .gitattributes  .gitignore  300_DPI_PDF.spec  LICENSE  README.md  main.spec  pyproject.toml
apps/convert_to_300_DPI/: README.md  main.py
apps/convert_to_DPI/: README.md  main.py
src/zacspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/zacspy/pdf/: convert_to_300_DPI.py
