[project]
name = "zacspy"
version = "0.1.0"
description = "Biblioteca de utilitários pessoais em Python"
authors = [{ name = "Isaac Sampaio", email = "isaac.s.cruzz@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pdf2image",
    "Pillow"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
